data/derived/comb/progs/unify/prog6133.ml.out
Characters 13-15:
  (List.mem 1 s0, List.mem 2 s0);;
              ^^
Error: This expression has type (bool * bool) set
       but an expression was expected of type int list
